# tinyrt

./: CMakeLists.txt  README.md  vcpkg.json
qml/: Main.qml
src/: Color.cpp  Color.hpp  Matrix.hpp  Point.cpp  Point.hpp  RTRender.cpp  RTRender.hpp  RTThread.cpp  RTThread.hpp  Tuple.hpp  Utils.hpp  Vec.cpp  Vec.hpp  main.cpp
tests/: CMakeLists.txt  ColorTests.cpp  MatrixTests.cpp  TupleTests.cpp  TupleVecPointTests.cpp  VecPointTests.cpp
